<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:src="@drawable/farma_py_top" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLayout"
        android:gravity="center_horizontal"
        android:text="@string/pillsTitle"
        android:textColor="@color/farmapy_title_color"
        android:textSize="@dimen/farmapy_title_size" />

    <TextView
        android:id="@+id/explanation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/pillsExplanation"
        android:textColor="@color/farmapy_explanation_color" />

    <TableLayout
        android:id="@+id/datefields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/explanation"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDateinit"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/dateinit"
                android:textColor="#006837"
                android:width="120dp" />

            <TextView
                android:id="@+id/textDateinit"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="#006837"
                android:width="80dp" />

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/farmapy_fecha"
            />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDateend"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/dateend"
                android:textColor="#006837" />

            <TextView
                android:id="@+id/textDateend"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="#006837" />

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/farmapy_fecha"
             />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewTimeinit"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/timeinit"
                android:textColor="#006837" />

            <TextView
                android:id="@+id/textTimeend"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textColor="#006837" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/farmapy_hora"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>   
      
    <LinearLayout
        android:id="@+id/llPillsPerDay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datefields"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timesforday"
            android:textColor="#006837" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#777777"
            android:textColor="#006837"/>
    </LinearLayout>
 
    <Button
        android:id="@+id/btnNotify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPillsPerDay"
        android:layout_marginTop="14dp"
        android:background="@drawable/farma_py_notificacion"
        android:gravity="center_vertical|center_horizontal|bottom"
        android:onClick="onDateSelectedButtonClick" />
    
    
   <DatePicker
       android:id="@+id/scheduleTimePickerinit"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/imageView1"
       android:visibility="gone" />

    <DatePicker
        android:id="@+id/scheduleTimePickerend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scheduleTimePickerinit"
        android:visibility="gone" />

    <TimePicker
        android:id="@+id/timePickerinit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/scheduleTimePickerend"
        android:layout_marginTop="44dp"
        android:visibility="gone" />


</RelativeLayout>